services/nginx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: webserver
          image: nginx
          imagePullPolicy: Always
          resources:
            requests:
              memory: 100Mi
              cpu: 70m
          ports:
            - containerPort: 80
